--- a/port/index.scss
+++ b/port/index.scss
@@ -185,32 +185,38 @@ p {
 
 
 
-
-#contact-info{
-    h3{
-        color: white;
-    }
-    p{
-        color:rgba(255, 255, 255, 0.622);
-    }
-}
-
-/* More specific selector to override Bootstrap styles */
-input,textarea{
-    padding: 15px !important;
-    border-color: 1px solid rgba(255, 255, 255, 0.098) !important;
-    background-color: #101624 !important;
-    &::placeholder {
-        color: rgba(255, 255, 255, 0.287) !important;
-       
-      }
-}
-.form-control.input-focus:focus {
-    outline: 3px solid $third-color !important;
-    box-shadow: 0 0 0 2px rgba(255, 255, 0, 0.5) !important;
-    border: none !important;
-    color:white;
+#contact-info {
+  h3 {
+      color: white;
   }
+  p {
+      color: rgba(255, 255, 255, 0.622);
+  }
+}
+
+/* Styling for input and textarea */
+input, textarea {
+  padding: 15px !important;
+  border: 1px solid rgba(255, 255, 255, 0.098) !important;
+  background-color: #101624 !important;
+  color: rgba(255, 255, 255, 0.622); /* Initial text color */
+  
+  &::placeholder {
+      color: rgba(255, 255, 255, 0.287) !important;
+  }
+
+  &:focus {
+      outline: 3px solid $third-color !important;
+      box-shadow: 0 0 0 2px rgba(255, 255, 0, 0.5) !important;
+      border: none !important;
+      color: white !important; /* Text color while focused */
+  }
+
+  &:valid {
+      color: white !important; /* Text color after input is entered */
+  }
+}
+
   /* title  componant styling*/
   #title{
    display: flex;
@@ -238,6 +244,7 @@ input,textarea{
 #service-item{
     background-color: #101624;
     border: 1px solid rgba(255, 255, 255, 0.172);
+    border-radius: 25px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -259,6 +266,7 @@ p{
 #service-item:hover p, 
 #service-item:hover span {
     color: $third-color;
+    border-color: $third-color;
 }
 #service-img{
     display: flex;
