--- a/port/index.scss
+++ b/port/index.scss
@@ -10,9 +10,14 @@ $fadedwhite-color:rgba(255, 255, 255, 0.287);
 $secondary-color:#fdfeff;
 $third-color:#fec544;
 $fourth-color:#ffffff92;
-body{
+body {
   font-family: "Open Sans", sans-serif;
+  margin: 0;
+  padding: 0;
+overflow-x: hidden;
 }
+
+
 #root{
     background-color: $main-bg-color !important;
 }
@@ -48,18 +53,18 @@ body{
 
 /* styles.css */
 .navbar {
-  position: fixed;
+  background-color: transparent;
+  height: auto;
+  position: sticky;
   top: 0;
-  width: 100%;
-  z-index: 1000;
-  background-color: transparent; /* Initial transparent background */
-  transition: background-color 0.3s ease; /* Smooth transition for background color change */
+  z-index: 1030;
+  transition: background-color 0.3s ease-in-out;
 }
   
-  .navbar.scrolled {
-    background-color: $headers-color ; /* Solid background color when scrolled */
-  }
-  
+.navbar.scrolled {
+  background-color: $headers-color; /* Solid background color */
+
+}
 /* styles.css */
 .nav-link {
     color: white !important;
